--- a/Yahoo-Messenger-Logo/style.scss
+++ b/Yahoo-Messenger-Logo/style.scss
@@ -14,7 +14,7 @@ body {
   background: #9b59b6;
 }
 
-#logo {
+#head {
   width: 300px;
   height: 300px;
   background: #F7D54F;
@@ -60,6 +60,33 @@ body {
     background: #C41D23;
     border-radius: 50%;
     box-shadow: 0 5px 25px 20px #C41D23;
+  }
+}
+
+#jaw {
+  position: relative;
+  z-index: 10;
+  height: 24px;
+  background: #fff;
+  border-bottom: 7px solid #000;
+
+  &:before,
+  &:after {
+    position: absolute;
+    width: 35%;
+    height: 100%;
+    content: "";
+    opacity: .8;
+  }
+
+  &:before {
+    left: 0;
+    background-image: -webkit-linear-gradient(bottom left, #333, #fff);
+  }
+
+  &:after {
+    right: 0;
+    background-image: -webkit-linear-gradient(bottom right, #333, #fff);
   }
 }
 
