--- a/Yahoo-Messenger-Logo/style.css
+++ b/Yahoo-Messenger-Logo/style.css
@@ -14,12 +14,32 @@ body {
 #head {
   width: 300px;
   height: 300px;
-  background: #F7D54F;
+  background-image: -webkit-linear-gradient(left top, #f9df82, #f1a722);
   position: absolute;
   top: calc(50% - 162px);
   left: calc(50% - 162px);
   border-radius: 50%;
-  border: 12px solid #EF9F1D; }
+  border: 12px solid #EF9F1D;
+  box-shadow: 0 3px 10px -1px rgba(0, 0, 0, 0.5);
+  overflow: hidden; }
+  #head:before, #head:after {
+    position: absolute;
+    left: 0;
+    content: ''; }
+  #head:before {
+    top: 0;
+    width: 300px;
+    height: 300px;
+    border-top: 15px solid rgba(255, 255, 255, 0.5);
+    z-index: 11;
+    border-radius: 50%; }
+  #head:after {
+    bottom: -10px;
+    width: 300px;
+    height: 300px;
+    border-bottom: 20px solid rgba(255, 255, 255, 0.5);
+    z-index: 11;
+    border-radius: 50%; }
 
 #mouth {
   width: 200px;
@@ -62,15 +82,15 @@ body {
   border-bottom: 7px solid #000; }
   #jaw:before, #jaw:after {
     position: absolute;
-    width: 35%;
+    width: 50%;
     height: 100%;
     content: "";
     opacity: .8; }
   #jaw:before {
-    left: 0;
+    left: -25px;
     background-image: -webkit-linear-gradient(bottom left, #333333, white); }
   #jaw:after {
-    right: 0;
+    right: -25px;
     background-image: -webkit-linear-gradient(bottom right, #333333, white); }
 
 #eyes {
