--- a/iOS-App-Uninstall/style.css
+++ b/iOS-App-Uninstall/style.css
@@ -5,7 +5,8 @@ div {
   padding: 0; }
 
 body {
-  background: #3498db; }
+  background: #3498db;
+  font-family: Arial; }
 
 #iphone {
   display: block;
@@ -75,5 +76,20 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  background: #34495e;
+  background: #27ae60;
   position: relative; }
+
+#navigation-bar {
+  overflow: hidden;
+  padding: 3px;
+  background: rgba(0, 0, 0, 0.2);
+  color: #fff;
+  font-size: 13px;
+  text-align: center;
+  font-weight: bold; }
+  #navigation-bar i {
+    font-size: 14px; }
+  #navigation-bar .connectivity {
+    float: left; }
+  #navigation-bar .utilities {
+    float: right; }
