--- a/iOS-App-Uninstall/style.css
+++ b/iOS-App-Uninstall/style.css
@@ -18,7 +18,7 @@ body {
   margin: 30px auto;
   border-radius: 35px;
   position: relative;
-  box-shadow: 15px 15px 0 rgba(0, 0, 0, 0.2); }
+  box-shadow: 6px 8px 0 6px #dddddd, 22px 25px 0 rgba(0, 0, 0, 0.15); }
 
 #top-pane {
   position: absolute;
