--- a/iOS-App-Uninstall/style.scss
+++ b/iOS-App-Uninstall/style.scss
@@ -1,6 +1,8 @@
 html,
 body,
-div {
+div,
+menu,
+p {
   margin: 0;
   padding: 0;
 }
@@ -86,7 +88,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  background: #27ae60;
+  background: #34495e;
   position: relative;
 }
 
@@ -109,5 +111,42 @@ body {
 
   .utilities {
     float: right;
+  }
+}
+
+#apps-grid {
+  overflow: hidden;
+  list-style: none;
+
+  li {
+    float: left;
+    width: 90px;
+    text-align: center;
+    padding: 10px 0;
+  }
+}
+
+.app-icon {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  border-radius: 10px;
+}
+
+.app-name {
+  text-align: center;
+  color: #fff;
+  font: {
+    size: 11px;
+  }
+  margin-top: 6px;
+}
+
+#sms {
+  background: #2ecc71;
+
+  .icon-comment {
+    color: #fff;
+    font-size: 40px;
   }
 }
