--- a/iOS-App-Uninstall/style.css
+++ b/iOS-App-Uninstall/style.css
@@ -108,12 +108,17 @@ body {
     padding: 10px 0; }
 
 .app-icon {
-  width: 70px;
-  height: 70px;
+  width: 68px;
+  height: 68px;
   margin: 0 auto;
-  display: block;
+  display: inline-block;
   border-radius: 15px;
   overflow: hidden; }
+  .app-icon i[class*=icon] {
+    display: inline-block;
+    margin-top: 8px;
+    color: #fff;
+    font-size: 48px; }
 
 .app-name {
   text-align: center;
@@ -124,11 +129,6 @@ body {
 
 #sms {
   background: #2ecc71; }
-  #sms .icon-comment {
-    display: inline-block;
-    margin-top: 6px;
-    color: #fff;
-    font-size: 45px; }
 
 #ical {
   background: #fff; }
@@ -146,7 +146,45 @@ body {
 #camera {
   background: #fff; }
   #camera .icon-camera {
-    display: inline-block;
-    margin-top: 10px;
-    font-size: 50px;
     color: #aaa; }
+
+#dropbox {
+  background: #3498db; }
+
+#gplus {
+  background: #e74c3c; }
+
+#linkedin {
+  background: #2980b9; }
+  #linkedin .icon-linkedin {
+    color: #fff; }
+
+#pinterest {
+  background: #fff; }
+  #pinterest .icon-pinterest {
+    font-size: 55px;
+    color: #ED003B; }
+
+#freshbooks {
+  background: #fff; }
+  #freshbooks .icon-leaf {
+    color: #2ecc71; }
+
+#mail {
+  background: #3498db; }
+  #mail .icon-envelope {
+    color: #fff; }
+
+#weather {
+  background: #FFBB00; }
+
+#facebook {
+  background: #415E9B; }
+  #facebook .icon-facebook {
+    margin-top: 10px; }
+
+#youtube {
+  background: #ED1730; }
+
+#music {
+  background: #9b59b6; }
