--- a/iOS-App-Uninstall/style.scss
+++ b/iOS-App-Uninstall/style.scss
@@ -98,9 +98,9 @@ body {
   padding: 3px;
   background: rgba(0, 0, 0, .2);
   color: #fff;
-  font-size: 13px;
+  font-size: 12px;
   text-align: center;
-  font-weight: bold;
+  font-weight: 600;
 
   i {
     font-size: 14px;
@@ -112,6 +112,34 @@ body {
 
   .utilities {
     float: right;
+  }
+
+  .battery {
+    display: inline-block;
+    width: 17px;
+    height: 8px;
+    border: 1px solid #fff;
+    position: relative;
+
+    &:before {
+     position: absolute;
+     top: 1px;
+     left: 1px;
+     bottom: 1px;
+     content: "";
+     width: 61%;
+     background: #fff;
+    }
+
+    &:after {
+      position: absolute;
+      content: "";
+      border: 1px solid #fff;
+      border-left: 0;
+      top: 2px;
+      right: -3px;
+      padding: 1px;
+    }
   }
 }
 
