--- a/iOS-App-Uninstall/style.css
+++ b/iOS-App-Uninstall/style.css
@@ -128,6 +128,19 @@ body {
     width: 90px;
     text-align: center;
     padding: 10px 0; }
+    #apps-grid li.shaking {
+      -webkit-animation-name: shaking;
+      -webkit-animation-duration: .12s;
+      -webkit-animation-iteration-count: infinite;
+      -webkit-animation-direction: alternate;
+      -webkit-animation-easing-function: ease-in; }
+
+@-webkit-keyframes shaking {
+  from {
+    -webkit-transform: rotate(2deg); }
+
+  to {
+    -webkit-transform: rotate(-2deg); } }
 
 .app-icon {
   width: 68px;
